--- a/vignettes/components/manuscript.latex
+++ b/vignettes/components/manuscript.latex
@@ -12,6 +12,9 @@
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
+\usepackage{graphicx}   
+\usepackage{booktabs}
+\usepackage{colortbl, xcolor}
 \usepackage{fixltx2e} % provides \textsubscript
 % use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
